<resources>
    <string name="app_name">Physicals</string>
    <string name="ConverterButton">Конвертер</string>
    <string name="FormulasButton">Формулы</string>
    <string name="SolvingProblemButton">Решение задач</string>
    <string name="todo">TODO</string>
    <string name="Background">TODO</string>
    <string name="InDeveloping">*В разработке</string>
    <string name="Gravity">Задачи на нахождения силы тяжести(F, m, g)</string>
    <string name="Weight">Задачи на нахождения веса(P, m, g)</string>
    <string name="PageTitleProblemSolving">Решение задач</string>
    <string name="Density">Задачи на нахождения плотности (p, m, V)</string>
    <string name="ButtonMomentOfPower">Задачи на нахождения момента силы (M, F, I)</string>
    <string name="NameOfApp">Physicals</string>
    <string name="Weight_title">Задачи на нахождение веса</string>
    <string name="Input_m">Масса тела(m)</string>
    <string name="Hint_m">Введите m</string>
    <string name="g_title">Ускорение свободного падения(g)</string>
    <string name="g_Hint">Введите g</string>
    <string name="Gravity_values">М/С²</string>
    <string name="p_Hint">Введите P</string>
    <string name="p_title">Вес(P)</string>
    <string name="button">Button</string>
    <string name="Find_title">Найти:</string>
    <string name="Answer_title">Ответ:</string>
    <string name="Answer_TextView">Здесь будет ответ</string>
    <string name="tetxview">TetxView</string>
    <string name="Solv">Решить</string>
    <string name="Gravity_title">Задачи на нахождение силы тяжести</string>
    <string name="F_title">Сила тяжести (Fтяж)</string>
    <string name="F_Hint">Введите Fтяж</string>
    <string name="AboutApp">О приложении</string>
    <string name="Density_title">Задачи на нахождение плотности</string>
    <string name="Volume_title">Объём(V)</string>
    <string name="InputV">Введите V</string>
    <string name="Input_Density_title">Плотность(ρ)</string>
    <string name="InputDensity">Введите ρ</string>
    <string name="MomentOfPowe_title">Задачи на нахождение момента силы</string>
    <string name="string_momentofpowe_title">Задачи на нахождение момента силы</string>
    <string name="l_title">Длина плеча(l)</string>
    <string name="l_Hint">Введите l</string>
    <string name="f_title">Модуль силы(F)</string>
    <string name="MomentOrPower_title">Момент Силы(M)</string>
    <string name="MomentOfPower_Hint">Введите M</string>
    <string name="ValuesOfMomentOfPower">Нм</string>
    <string name="inputF">Введите F</string>
    <string name="Formulas_title">Формулы</string>
    <string name="string_formulas_title">Формулы</string>
    <string name="Pop_up_window">
        Приложение сделал Барановский Владислав\n
        Приложение находиться в разработке\n
        Поэтому могут присуствовать какие-либо баги\n
    </string>
    <string name="v_s_t_title">V = S / t (Скорость)</string>
    <string name="s_t_v_pos">S — путь тела, \n
        t — время, за которое этот путь пройден, \n
        V - скорость, с которой пройден этот путь</string>
    <string name="s_t_v_Ci">СИ: S = км, t = ч, V = км/ч</string>
    <string name="Formulas_s_t_v">Также можно найти: S = V × t, t = S / V</string>
    <string name="p_mg_title">P = m × g (Вес)</string>
    <string name="m_g_p_pos">m — масса тела, g — ускорение свободного падения, P - вес тела</string>
    <string name="p_m_g_Ci">СИ: P = Н, m = кг, g = 9,8 м/с²</string>
    <string name="Formulas_p_m_g">Также можно найти: m = P / g, g = P / m</string>
    <string name="m_v_title">ρ = m / V (плотность)</string>
    <string name="p_m_CI">СИ: ρ = кг/м³, m = кг, V = м³</string>
    <string name="m_v_зщы">m — масса тела или вещества, V — занимаемый объем, ρ - плотность тела</string>
    <string name="m_v_v_m_Formula">Также можно найти: m = ρ * V, V = m / ρ</string>
    <string name="m_f_l_title">M = F × l (Момент силы)</string>
    <string name="f_l_m_pos">F — модуль силы, l — длина плеча, M - момент силы</string>
    <string name="m_hm_f_h_i_pos">СИ: M = Hm, F = H. I = м</string>
    <string name="f_m_l_l_m_f_formula">Также можно найти: F = M / l, l = M / F</string>
    <string name="p_f_s_title">p = F / S (давление)</string>
    <string name="f_s_p_pos">F — модуль силы, S — площадь поверхности, p - плотность тела</string>
    <string name="p_f_h_s_CI">СИ: p = Па, F = H, S = м²</string>
    <string name="f_p_s_s_f_p_formulas">Также можно найти: F = p × S, S = F / p</string>
    <string name="g_h_title">р = ρ × g × h (гидростатическое давление)</string>
    <string name="g_h_pos">ρ — плотность вещества, g — ускорение свободного падения, h — высота столба, р - гидростатическое давление</string>
    <string name="fa_g_v_title">Fa = ρ × g × V (архимедова сила)</string>
    <string name="v_g_9_8_2_fa_pos">ρ — плотность жидкости, V — объем погруженной части тела, g — ускорение 9,8 м/с2, Fa = архимедова сила</string>
    <string name="g_9_8_CI">СИ: g = 9,8 м/с², р = Па, ρ = кг/м³</string>
    <string name="g_9_CI">СИ: g = 9,8 м/с², V = м³, ρ = кг/м³, Fa = Н</string>
    <string name="g_h_g_h_h_g_formula">Также можно найти: ρ = р / g × h, g = р / ρ × h, h = р / g × ρ</string>
    <string name="fa_g_v_g_fa_v_v_fa_g_formula">Также можно найти: ρ = Fa / g × V, g = Fa / ρ × V, V = Fa / ρ × g</string>
    <string name="a_f_s_title">A = F × S (Работа)</string>
    <string name="f_s_a_pos">F — действующая сила, S — пройденный телом путь, A - работа</string>
    <string name="a_f_h_s">СИ: A - Дж, F - H, S - м</string>
    <string name="f_a_s_s_a_f_formula">Также можно найти: F = A / S, S = A / F</string>
    <string name="n_a_t_title">N = A / t (Мощность)</string>
    <string name="a_t_n_pos">A — работа, t — время ее совершения, N - мощность</string>
    <string name="n_a_t_Ci">СИ: N = Вт, A = Дж, t = ч</string>
    <string name="a_n_t_t_a_n_formula">Также можно найти: A = N × t, t = A / N</string>
    <string name="ek_mv_2_title">Ek = m × v²/2 (Кинетическая энергия)</string>
    <string name="e_m_v_CI">СИ: Eк = Дж, m = кг, V = км/ч</string>
    <string name="e_m_v_pos">Eк - кинетическая энергия, m - масса, v - скорость</string>
    <string name="m_2_e_v_v_2_e_m_formula">Также можно найти: m = 2 * Eк / v², v = √ 2 * Eк / m</string>
    <string name="e_mgh_title">Eп = m × g × h (Потенциальная энергия)</string>
    <string name="e_m_g_9_8_h_Ci">СИ: Eп = Дж, m = кг, g = 9,8 м/с², h = м</string>
    <string name="e_m_g_h_pos">Eп - потенциальная энергия, m - масса тела, g - ускорение свободного падения, h - высота</string>
    <string name="m_e_g_h_g_e_m_h_h_e_g_m_formula">Также можно найти: m = Eп / g * h, g = Eп / m * h, h = Eп / g * m</string>
    <string name="e_e_e_title">E = Eк+Eп (Полная механическая энергия)</string>
    <string name="e_e_e_pos">E - полная механическая энергия, Eк - кинетическая энергия, Eп - потенциальная энергия.</string>
    <string name="e_e_e_Ci">СИ: E = Дж, Eк = Дж, Eп = Дж</string>
    <string name="e_e_e_e_e_e_formulas">Также можно найти: Eк = E - Eп, Eп = E - Eк</string>
    <string name="kpd_title">η = Ап / Аз (КПД)</string>
    <string name="a_a_pos">η — коэффициент полезного действия, Aп — полезная работа, Aз — затраченная работа</string>
    <string name="a_a_Ci">СИ: η - %, Aп - Дж, Aз - Дж</string>
    <string name="_100_100_formulas">Также можно найти: Аз = Ап * 100% / η, Ап = Аз * η / 100%</string>
    <string name="AboutAp">О приложении</string>
    <string name="AboutMe">Приложение сделал Барановский Владислав.</string>
    <string name="Bago">Возможны какие-либо баги</string>
    <string name="physicalsmailsup_gmail_com">Можете присылать на почту баги или свои идеи: physicalsmailsup@gmail.com</string>
    <string name="Davlenie">Задачи на нахождение давления (p, F, S)</string>
    <string name="pressure_title">Задачи на нахождение давления</string>
    <string name="Pressure_title">Давление (p)</string>
    <string name="p_input">Введите p</string>
    <string name="s">Площадь поверхности (S)</string>
    <string-array name="Values_weight">
        <item>Кг</item>
        <item>Г</item>
        <item>Ц</item>
        <item>Т</item>
    </string-array>
    <string-array name="Values_Nuton">
        <item>Н</item>
        <item>кН</item>
        <item>МН</item>
        <item>ГН</item>
    </string-array>
    <string-array name="Values_Volume">
        <item>м³</item>
        <item>см³</item>
        <item>Л</item>
    </string-array>
    <string-array name="Values_Length">
        <item>М</item>
        <item>СМ</item>
    </string-array>
    <string-array name="Values_Density">
        <item>Кг/м³</item>
        <item>Г/см³</item>
    </string-array>
    <string-array name="Values_Find_For_Weight">
        <item>P</item>
        <item>m</item>
        <item>g</item>
    </string-array>
    <string-array name="Values_Find_For_Gravity">
        <item>Fтяж</item>
        <item>m</item>
        <item>g</item>
    </string-array>
    <string-array name="Values_Find_For_Density">
        <item>ρ</item>
        <item>m</item>
        <item>V</item>
    </string-array>
    <string-array name="Values_Find_For_MomentOfPower">
        <item>M</item>
        <item>F</item>
        <item>l</item>
    </string-array>
    <string-array name="Values_Paskal">
        <item>Па</item>
        <item>гПа</item>
        <item>кПа</item>
        <item>МПа</item>
    </string-array>
    <string-array name="Values_S">
        <item>М²</item>
        <item>СМ²</item>
        <item>КМ²</item>
    </string-array>
    <string-array name="Values_Find_For_Pressure">
        <item>p</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="title_activity_convert_list">ConvertList</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="Massabutton">Масса (кг)</string>
    <string name="NutonButton">Ньютоны (Н)</string>
    <string name="buttonS">Площадь (м²)</string>
    <string name="Converter_title">Конвертер величин</string>
    <string name="Convert_massa_title">Конвертер массы</string>
    <string name="Input_info">Входные данные</string>
    <string name="AnswerConverterMassa_title">Ответ:</string>
    <string name="Answer_in">Ответ в</string>
    <string name="Con">Конвертировать</string>
    <string name="Nuton_hint">Введите значение</string>
    <string name="Nuton_title">Конвертер Ньютонов</string>
    <string name="S_title">Конвертер площади</string>
    <string name="s_hint">Введите S</string>
    <string-array name="Values_For_Converter_Masssa">
        <item>Кг</item>
        <item>Г</item>
        <item>Мг</item>
        <item>Ц</item>
        <item>Т</item>
    </string-array>
    <string-array name="Values_For_Converter_Nuton">
        <item>Н</item>
        <item>гН</item>
        <item>кН</item>
        <item>МН</item>
        <item>ГН</item>
    </string-array>
    <string-array name="Values_For_Converter_S">
        <item>м²</item>
        <item>см²</item>
        <item>км²</item>
        <item>Га</item>
        <item>Ар</item>
    </string-array>
</resources>