<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEAD8"
    android:stateListAnimator="@android:anim/fade_out"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAboutApp"
        android:layout_width="396dp"
        android:layout_height="95dp"
        android:backgroundTint="#6D8B74"
        android:text="@string/AboutApp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonConverter"
        app:layout_constraintVertical_bias="0.165"
        app:strokeColor="#5E17EB" />

    <Button
        android:id="@+id/ButtonFormulas"
        android:layout_width="396dp"
        android:layout_height="95dp"
        android:backgroundTint="#6D8B74"
        android:text="@string/FormulasButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSolvingProblem"
        app:layout_constraintVertical_bias="0.079"
        app:strokeColor="#5E17EB" />

    <Button
        android:id="@+id/ButtonSolvingProblem"
        android:layout_width="396dp"
        android:layout_height="95dp"
        android:backgroundTint="#6D8B74"
        android:text="@string/SolvingProblemButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:strokeColor="#5E17EB" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="70dp"
        android:text="@string/NameOfApp"
        android:textAlignment="center"
        android:textColor="#5F7161"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonSolvingProblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonConverter"
        android:layout_width="396dp"
        android:layout_height="95dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#6D8B74"
        android:text="@string/ConverterButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonFormulas"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>